Responsive button spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -172,10 +172,6 @@ p{
   color: white;
 }
 
-.github-btn {
-  margin-left: 2vh;
-}
-
 /* Buttons end */
 
 /* Footer start */
